--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/animations.css">
-	<link rel="stylesheet" href="css/font-awesome.css">
-	<link rel="stylesheet" href="css/main.css" class="color-switcher-link">
+	<link rel="stylesheet" href="bootstrap.min.css">
+	<link rel="stylesheet" href="animations.css">
+	<link rel="stylesheet" href="font-awesome.css">
+	<link rel="stylesheet" href="main.css" class="color-switcher-link">
 	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
 	<!--[if lt IE 9]>
