--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 	<link rel="stylesheet" href="animations.css">
 	<link rel="stylesheet" href="font-awesome.css">
 	<link rel="stylesheet" href="main.css" class="color-switcher-link">
-	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+	<script src="modernizr-2.6.2.min.js"></script>
 
 	<!--[if lt IE 9]>
-		<script src="js/vendor/html5shiv.min.js"></script>
-		<script src="js/vendor/respond.min.js"></script>
-		<script src="js/vendor/jquery-1.12.4.min.js"></script>
+		<script src="html5shiv.min.js"></script>
+		<script src="respond.min.js"></script>
+		<script src="jquery-1.12.4.min.js"></script>
 	<![endif]-->
 
 </head>
