--- a/services1.html
+++ b/services1.html
@@ -84,7 +84,7 @@
 					<div class="container-fluid">
 						<div class="row align-items-center">
 							<div class="col-xl-2 col-lg-3 col-6">
-                                <a href="index.html"><img class="logo-img" src="images/logo.png"></a>
+                                <a href="index.html"><img class="logo-img" src="logo.png"></a>
 							</div>
 							<div class="col-xl-5 col-lg-6 col-1 text-sm-center center">
 								<!-- main nav start -->
@@ -184,8 +184,8 @@
 							<div class="vertical-item content-padding hero-bg text-center">
 								<div class="item-media profile-media">
 									<div class="owl-carousel" data-margin="0" data-responsive-lg="1" data-responsive-md="1" data-responsive-sm="1" data-responsive-xs="1">
-										<a href="images/Standard%20Profile.png" class="photoswipe-link" data-width="1280" data-height="492">
-											<img src="images/Standard%20Profile.png" alt="Standard Profile">
+										<a href="Standard%20Profile.png" class="photoswipe-link" data-width="1280" data-height="492">
+											<img src="Standard%20Profile.png" alt="Standard Profile">
 										</a>
 									</div>
 								</div>
@@ -215,25 +215,25 @@
 							<div class="col-sm-12 text-center">
 								<div class="owl-carousel partners-carousel" data-center="true" data-loop="true" data-responsive-lg="7 " data-responsive-md="4" data-responsive-sm="3" data-responsive-xs="2">
 									<a href="#">
-										<img src="images/partners/01.png" alt="">
+										<img src="partners/01.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/02.png" alt="">
+										<img src="partners/02.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/03.png" alt="">
+										<img src="partners/03.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/04.png" alt="">
+										<img src="partners/04.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/05.png" alt="">
+										<img src="partners/05.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/06.png" alt="">
+										<img src="partners/06.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/07.png" alt="">
+										<img src="partners/07.png" alt="">
 									</a>
 								</div>
 							</div>
@@ -245,7 +245,7 @@
 					<div class="container">
 					<div class="row">
 
-                        <div class="logo-foot text-center"><a href="index.html"><img class="logo-img-2" src="images/logo%202.png"></a></div>
+                        <div class="logo-foot text-center"><a href="index.html"><img class="logo-img-2" src="logo%202.png"></a></div>
                         
 						<div class="col-lg-8 animate" data-animation="scaleAppear">
 
