--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
 					<div class="container-fluid">
 						<div class="row align-items-center">
 							<div class="col-xl-2 col-lg-3 col-6">
-                                <a href="index.html"><img class="logo-img" src="images/logo.png"></a>
+                                <a href="index.html"><img class="logo-img" src="logo.png"></a>
 							</div>
 							<div class="col-xl-5 col-lg-6 col-1 text-sm-center center">
 								<!-- main nav start -->
@@ -327,25 +327,25 @@
 							<div class="col-sm-12 text-center">
 								<div class="owl-carousel partners-carousel" data-center="true" data-loop="true" data-responsive-lg="7 " data-responsive-md="4" data-responsive-sm="3" data-responsive-xs="2">
 									<a href="#">
-										<img src="images/partners/01.png" alt="">
+										<img src="partners/01.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/02.png" alt="">
+										<img src="partners/02.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/03.png" alt="">
+										<img src="partners/03.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/04.png" alt="">
+										<img src="partners/04.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/05.png" alt="">
+										<img src="partners/05.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/06.png" alt="">
+										<img src="partners/06.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/07.png" alt="">
+										<img src="partners/07.png" alt="">
 									</a>
 								</div>
 							</div>
@@ -388,7 +388,7 @@
 
 								<div class="widget widget_text widget-logo">
 									<a href="./" class="logo flex-column">
-										<img src="images/logo.png" alt="">
+										<img src="logo.png" alt="">
 										<div class="logo-text-bottom">Ferrum</div>
 									</a>
 
