--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<div class="container-fluid">
 						<div class="row align-items-center">
 							<div class="col-xl-2 col-lg-3 col-6">
-                                <a href="index.html"><img class="logo-img" src="images/logo.png"></a>
+                                <a href="index.html"><img class="logo-img" src="logo.png"></a>
 							</div>
 							<div class="col-xl-5 col-lg-6 col-1 text-sm-center center">
 								<!-- main nav start -->
@@ -151,7 +151,7 @@
 				<div class="flexslider">
 					<ul class="slides">
 						<li class="ds ms text-center">
-							<img src="images/Photo1.png" alt="">
+							<img src="Photo1.png" alt="">
 							<div class="container">
 								<div class="row">
 									<div class="col-md-12">
@@ -184,7 +184,7 @@
 							<!-- eof .container-fluid -->
 						</li>
 						<li class="ds ms text-center">
-							<img src="images/Photo2.png" alt="">
+							<img src="Photo2.png" alt="">
 							<div class="container">
 								<div class="row">
 									<div class="col-md-12">
@@ -218,7 +218,7 @@
 						</li>
 
 						<li class="ds ms text-center">
-							<img src="images/Photo3.png" alt="">
+							<img src="Photo3.png" alt="">
 							<div class="container">
 								<div class="row">
 									<div class="col-md-12">
@@ -263,7 +263,7 @@
 							<div class="main-content text-center">
 								<h2 class="welcome">
 									Welcome to
-								<img class="logo-welcome" src="images/logo.png" alt="">
+								<img class="logo-welcome" src="logo.png" alt="">
 								</h2>
 								<p>
 									We’re a metal producing company that specializes in, aluminunium extrusion, galvalum, and many other kinds. We make metal products you need for your construction projects, only with the finest material and impeccable precision.
@@ -283,7 +283,7 @@
 						<div class="col-12 col-md-6 col-lg-4 animate" data-animation="fadeInUp">
 
 							<div class="icon-box text-center">
-								<img src="images/icon-01.png" alt="">
+								<img src="icon-01.png" alt="">
 
 								<h5>
 									<a>Creativity</a>
@@ -300,7 +300,7 @@
 						<div class="col-12 col-md-6 col-lg-4 animate" data-animation="fadeInUp">
 
 							<div class="icon-box text-center">
-								<img src="images/icon-02.png" alt="">
+								<img src="icon-02.png" alt="">
 
 								<h5>
 									<a>Reliability</a>
@@ -317,7 +317,7 @@
 						<div class="col-12 col-md-6 col-lg-4 animate" data-animation="fadeInUp">
 
 							<div class="icon-box text-center">
-								<img src="images/icon-03.png" alt="">
+								<img src="icon-03.png" alt="">
 
 								<h5>
 									<a>Service</a>
@@ -334,7 +334,7 @@
 						<div class="col-12 col-md-6 col-lg-4 animate" data-animation="fadeInUp">
 
 							<div class="icon-box text-center">
-								<img src="images/icon-04.png" alt="">
+								<img src="icon-04.png" alt="">
 
 								<h5>
 									<a>Precision</a>
@@ -351,7 +351,7 @@
 						<div class="col-12 col-md-6 col-lg-4 animate" data-animation="fadeInUp">
 
 							<div class="icon-box text-center">
-								<img src="images/icon-05.png" alt="">
+								<img src="icon-05.png" alt="">
 
 								<h5>
 									<a>Quality</a>
@@ -368,7 +368,7 @@
 						<div class="col-12 col-md-6 col-lg-4 animate" data-animation="fadeInUp">
 
 							<div class="icon-box text-center">
-								<img src="images/icon-06.png" alt="">
+								<img src="icon-06.png" alt="">
 
 								<h5>
 									<a>Breadth</a>
@@ -399,7 +399,7 @@
 							<div class="owl-carousel" data-responsive-lg="2" data-responsive-md="2" data-responsive-sm="2" data-responsive-xs="2" data-nav="true" data-loop="true">
 								<div class="vertical-item hero-bg content-padding text-center">
 									<div class="item-media">
-										<img src="images/Standard%20Profile.png" alt="">
+										<img src="Standard%20Profile.png" alt="">
 										<div class="media-links">
 											<a href="team-single.html"></a>
 										</div>
@@ -414,7 +414,7 @@
 
 								<div class="vertical-item hero-bg content-padding text-center">
 									<div class="item-media">
-										<img src="images/Custom%20Profile.png" alt="">
+										<img src="Custom%20Profile.png" alt="">
 										<div class="media-links">
 											<a title="" href="team-single.html"></a>
 										</div>
@@ -441,25 +441,25 @@
 							<div class="col-sm-12 text-center">
 								<div class="owl-carousel partners-carousel" data-center="true" data-loop="true" data-responsive-lg="7 " data-responsive-md="4" data-responsive-sm="3" data-responsive-xs="2">
 									<a href="#">
-										<img src="images/partners/01.png" alt="">
+										<img src="partners/01.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/02.png" alt="">
+										<img src="partners/02.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/03.png" alt="">
+										<img src="partners/03.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/04.png" alt="">
+										<img src="partners/04.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/05.png" alt="">
+										<img src="partners/05.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/06.png" alt="">
+										<img src="partners/06.png" alt="">
 									</a>
 									<a href="#">
-										<img src="images/partners/07.png" alt="">
+										<img src="partners/07.png" alt="">
 									</a>
 								</div>
 							</div>
@@ -471,7 +471,7 @@
 					<div class="container">
 					<div class="row">
 
-                        <div class="logo-foot text-center"><a href="index.html"><img class="logo-img-2" src="images/logo%202.png"></a></div>
+                        <div class="logo-foot text-center"><a href="index.html"><img class="logo-img-2" src="logo%202.png"></a></div>
                         
 						<div class="col-lg-8 animate" data-animation="scaleAppear">
 
